wacc/test/golden/semanticErr.expressions.moreArrExpr
# program performs boolean operations on arrays

# Output:
# #semantic_error#

# Exit:
# 200

# Program:

begin
  int[] x = [1,2];
  int[] y = [3,4];
  println x > y
end


Semantic error in test/wacc_examples/invalid/semanticErr/expressions/moreArrExpr.wacc (line 14, column 13):
type error: comparisons are only valid between ints and chars, but an int[] was found
>   int[] y = [3,4];
>   println x > y
>             ^
> end

